// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule element-required-attributes should contain contextual documentation 1`] = `
Object {
  "description": "The <any> element is required to have a \\"foo\\" attribute.",
  "url": "https://html-validate.org/rules/element-required-attributes.html",
}
`;

exports[`rule element-required-attributes should contain documentation 1`] = `
Object {
  "description": "Element is missing a required attribute",
  "url": "https://html-validate.org/rules/element-required-attributes.html",
}
`;

exports[`rule element-required-attributes smoketest 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "test-files/rules/element-required-attributes.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": Object {
          "attribute": "type",
          "element": "input",
        },
        "line": 1,
        "message": "<input> is missing required \\"type\\" attribute",
        "offset": 1,
        "ruleId": "element-required-attributes",
        "selector": "input",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<input>
<input type>
<input type=\\"\\">
<input type=\\"text\\">
<input type=\\"foobar\\">
",
    "warningCount": 0,
  },
]
`;
